changed font color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         h1 {
             font-size: 4vw; /* Responsive font size */
-            color: red;
+            color: black;
             margin: 0;
         }
         p {
